--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         ></a-entity>
       </a-entity>
 
-      <!-- FRONT (light green)-->
+      <!-- FRONT (green)-->
       <a-entity
         id="cube_front"
         geometry="primitive: plane; width: 20; height: 20"
-        material="color: #7BC8A4; side: double"
+        material="color: green; side: double"
         height="100"
         width="100"
         rotation="-90 00 00"
@@ -77,33 +77,33 @@
         position="0 0 20"
       ></a-entity>
       
-      <!-- LEFT (pink)-->
+      <!-- LEFT (yellow)-->
       <a-entity
         id="cube_left"
         geometry="primitive: plane; width: 20; height: 20"
-        material="color: pink; side: double"
+        material="color: yellow; side: double"
         height="100"
         width="100"
         rotation="-90 00 00"
         position="-20 0 0"
       ></a-entity>
 
-      <!-- RIGHT (purple) -->
+      <!-- RIGHT (red) -->
       <a-entity
         id="cube_right"
         geometry="primitive: plane; width: 20; height: 20"
-        material="color: purple; side: double"
+        material="color: red; side: double"
         height="100"
         width="100"
         rotation="-90 00 00"
         position="20 0 0"
       ></a-entity>
       
-      <!-- BACK (yellow) -->
+      <!-- BACK (pink) -->
       <a-entity
         id="cube_back"
         geometry="primitive: plane; width: 20; height: 20"
-        material="color: yellow; side: double"
+        material="color: pink; side: double"
         height="100"
         width="100"
         rotation="-90 00 00"
