--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         position="0 0 -20"
       ></a-entity>
       
-      <!-- BOTTOM (orange)-->
+      <!-- BOTTOM (pink)-->
       <a-entity
         id="cube_bottom"
         geometry="primitive: plane; width: 20; height: 20"
-        material="color: orange; side: double"
+        material="color: pink; side: double"
         height="100"
         width="100"
         rotation="-90 00 00"
@@ -88,22 +88,22 @@
         position="-20 0 0"
       ></a-entity>
 
-      <!-- RIGHT (red) -->
+      <!-- RIGHT (orange) -->
       <a-entity
         id="cube_right"
         geometry="primitive: plane; width: 20; height: 20"
-        material="color: red; side: double"
+        material="color: orange; side: double"
         height="100"
         width="100"
         rotation="-90 00 00"
         position="20 0 0"
       ></a-entity>
       
-      <!-- BACK (pink) -->
+      <!-- BACK (red) -->
       <a-entity
         id="cube_back"
         geometry="primitive: plane; width: 20; height: 20"
-        material="color: pink; side: double"
+        material="color: red; side: double"
         height="100"
         width="100"
         rotation="-90 00 00"
