--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         Let us not worry about the camera for now. A-Frame takes care of most of the setup for us.
       -->
-      <a-entity id="rig" movement-controls position="0 0 0">
+      <a-entity id="rig" movement-controls position="0 0 0" position-tracking>
         <a-entity
           id="camera"
           camera="fov:55"
