--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   
   <body>
-    
+    <script>
           AFRAME.registerComponent("position-tracking", {
         // A new instance of the component gets created for each <a-entity> the component is attached to
 
@@ -58,6 +58,7 @@
           this.debug(t, dt);
         }
       });
+    </script>
     
     <!-- 
     Any A-Frame scene must be contained inside an `<a-scene>` tag. 
