--- a/index.html
+++ b/index.html
@@ -44,36 +44,35 @@
           this.el.object3D.position.y;
           this.el.object3D.position.z;
 
+         
           if (this.el.object3D.position.x < 10 && this.el.object3D.position.x > -10) {
             if (this.el.object3D.position.z < 10 && this.el.object3D.position.z > -10) {
-            console.log("FRONT")
+              console.log("FRONT");
             }
-          } else if (this.el.object3D.position.x < 10 && this.el.object3D.position.x > -10) {
-            if (this.el.object3D.position.z < -10 && this.el.object3D.position.z > -30) {
-              console.log("TOP")
+            else if (this.el.object3D.position.z < -10 && this.el.object3D.position.z > -30){
+              console.log("TOP");
             }
-          } else if (this.el.object3D.position.x < 10 && this.el.object3D.position.x > -10) {
-            if (this.el.object3D.position.z < 30 && this.el.object3D.position.z > 10) {
-              console.log("BOTTOM")
+            else if (this.el.object3D.position.z < 30 && this.el.object3D.position.z > 10) {
+              console.log("BOTTOM");
             }
           } else if (this.el.object3D.position.x < -10 && this.el.object3D.position.x > -20) {
             if (this.el.object3D.position.z < 10 && this.el.object3D.position.z > -10) {
-            console.log("LEFT")
+              console.log("LEFT");
             }
           } else if (this.el.object3D.position.x < 30 && this.el.object3D.position.x > 10) {
-            if (this.el.object3D.position.z < 10 && this.el.object3D.position.z > -10) {
-            console.log("RIGHT")
-            }
+              if (this.el.object3D.position.z < 10 && this.el.object3D.position.z > -10) {
+                console.log("RIGHT");
+              }
           } else if (this.el.object3D.position.x < 50 && this.el.object3D.position.x > 30) {
-            if (this.el.object3D.position.z < 10 && this.el.object3D.position.z > -10) {
-            console.log("BACK")
-            }
+              if (this.el.object3D.position.z < 10 && this.el.object3D.position.z > -10) {
+                console.log("BACK");
+              }
           }  
 
           // The following code is responsible for calling the debugging function
           this.debug(t, dt);
         }
-      });
+      }
     </script>
 
     <!-- 
