--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           console.log(
             "Hello, " +
               this.name +
-              " is being initialized on the element (MODIFICATION TEST)"
+              " is being initialized on the element."
           );
           // this.el refers to the <a-entity> this component is attached to
           console.log(this.el);
@@ -34,7 +34,7 @@
         debug: function (t, dt) {
           // This debugging functions is NOT executed automatically
           // It gets called from the "tick" function
-          console.log("This is a debugging function (MODIFICATION TEST)");
+          console.log("This is a debugging function");
           // Printing x, y, z values //
           console.log("x-position: " + this.el.object3D.position.x);
           console.log("z-position: " + this.el.object3D.position.z);
@@ -47,13 +47,9 @@
           if (this.el.object3D.position.x < 10 && this.el.object3D.position.x > -10) {
             if (this.el.object3D.position.z < 10 && this.el.object3D.position.z > -10) {
             console.log("FRONT")
-            }
-          } else if (this.el.object3D.position.x < 10 && this.el.object3D.position.x > -10) {
-            if (this.el.object3D.position.z < -10 && this.el.object3D.position.z > -30) {
+            } else if (this.el.object3D.position.z < -10 && this.el.object3D.position.z > -30) {
               console.log("TOP")
-            }
-          } else if (this.el.object3D.position.x < 10 && this.el.object3D.position.x > -10) {
-            if (this.el.object3D.position.z < 30 && this.el.object3D.position.z > 10) {
+            } else if (this.el.object3D.position.z < 30 && this.el.object3D.position.z > 10) {
               console.log("BOTTOM")
             }
           } else if (this.el.object3D.position.x < -10 && this.el.object3D.position.x > -20) {
